test/domains/userAPI/orderIndex-OOB.chpl

var DR = {1..3};
writeln(DR.orderToIndex(3));
